--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ authors = [
     { name = "Jacob Chmura", email = "jacobpaul.chmura@gmail.com" },
 ]
 dependencies = [
+    "adapters>=1.0.1",
     "numpy>=2.0.2",
     "torch>=2.5.1",
-    "transformers>=4.46.3",
 ]
 
 [build-system]
