--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,10 @@ authors = [
     { name = "Jacob Chmura", email = "jacobpaul.chmura@gmail.com" },
 ]
 dependencies = [
+    "accelerate>=1.1.1",
     "adapters>=1.0.1",
+    "datasets>=3.1.0",
+    "evaluate>=0.4.3",
     "numpy>=2.0.2",
     "torch>=2.5.1",
 ]
