Parse nested args as dict

--- a/config/base.yaml
+++ b/config/base.yaml
@@ -15,14 +15,13 @@ TrainingArguments:
   per_device_train_batch_size: 8
   use_cpu: true
 FinetuningArguments:
-  finetuning_args:
-    classification_head:
-      FinetuningArgument:
-        DataArguments:
-          task_name: "plausibility"
-          train_file: "data/plausibility_data/pep_3k/valid.csv"
-          test_file: "data/plausibility_data/pep_3k/test.csv"
-        AdapterArguments:
-          adapter_config: 'seq_bn'
-          load_adapter: ''
-          train_adapter: false
+  classification_head:
+    FinetuningArgument:
+      data_args:
+        task_name: "plausibility"
+        train_file: "data/plausibility_data/pep_3k/valid.csv"
+        test_file: "data/plausibility_data/pep_3k/test.csv"
+      adapter_args:
+        adapter_config: 'seq_bn'
+        load_adapter: ''
+        train_adapter: false
