--- a/config/base.yaml
+++ b/config/base.yaml
@@ -24,3 +24,19 @@ FinetuningArguments:
       adapter_args:
         adapter_config: 'seq_bn'
         train_adapter: true
+    verb_subject_association:
+      data_args:
+        task_name: "verb_subject_association"
+        train_file: "data/verb_understanding_data/selectional_association_subject.csv"
+        test_file:
+      adapter_args:
+        adapter_config: 'seq_bn'
+        train_adapter: true
+    verb_object_association:
+      data_args:
+        task_name: "verb_object_association"
+        train_file: "data/verb_understanding_data/selectional_association_object.csv"
+        test_file:
+      adapter_args:
+        adapter_config: 'seq_bn'
+        train_adapter: true
