Seperate out pretraining and downstream finetuning tasks

--- a/config/base.yaml
+++ b/config/base.yaml
@@ -15,15 +15,9 @@ TrainingArguments:
   per_device_train_batch_size: 8
   use_cpu: true
 FinetuningArguments:
-  tasks:
-    classification_head:
-      data_args:
-        task_name: "plausibility"
-        train_file: "data/plausibility_data/pep_3k/valid.csv"
-        test_file: "data/plausibility_data/pep_3k/test.csv"
-      adapter_args:
-        adapter_config: 'seq_bn'
+  pretraining_tasks:
     verb_subject_association:
+      is_regression: true
       data_args:
         task_name: "verb_subject_association"
         train_file: "data/verb_understanding_data/selectional_association_subject.csv"
@@ -31,9 +25,19 @@ FinetuningArguments:
       adapter_args:
         adapter_config: 'seq_bn'
     verb_object_association:
+      is_regression: true
       data_args:
         task_name: "verb_object_association"
         train_file: "data/verb_understanding_data/selectional_association_object.csv"
         test_file:
+      adapter_args:
+        adapter_config: 'seq_bn'
+  downstream_tasks:
+    classification_head:
+      is_regression: false
+      data_args:
+        task_name: "plausibility"
+        train_file: "data/plausibility_data/pep_3k/valid.csv"
+        test_file: "data/plausibility_data/pep_3k/test.csv"
       adapter_args:
         adapter_config: 'seq_bn'
