--- a/config/base.yaml
+++ b/config/base.yaml
@@ -23,7 +23,7 @@ FinetuningArguments:
         train_file: data/verb_understanding_data/selectional_association_subject/train.csv
         test_file: data/verb_understanding_data/selectional_association_subject/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     verb_object_score:
       data_args:
         task_name: verb_object_score
@@ -31,7 +31,7 @@ FinetuningArguments:
         train_file: data/verb_understanding_data/selectional_association_object/train.csv
         test_file: data/verb_understanding_data/selectional_association_object/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     mobility_pred:
       data_args:
         task_name: mobility_pred
@@ -39,7 +39,7 @@ FinetuningArguments:
         train_file: data/property_data/Mobility/train.csv
         test_file: data/property_data/Mobility/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     opacity_pred:
       data_args:
         task_name: opacity_pred
@@ -47,7 +47,7 @@ FinetuningArguments:
         train_file: data/property_data/Opacity/train.csv
         test_file: data/property_data/Opacity/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     phase_pred:
       data_args:
         task_name: phase_pred
@@ -55,7 +55,7 @@ FinetuningArguments:
         train_file: data/property_data/Phase/train.csv
         test_file: data/property_data/Phase/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     rigidity_pred:
       data_args:
         task_name: rigidity_pred
@@ -63,7 +63,7 @@ FinetuningArguments:
         train_file: data/property_data/Rigidity/train.csv
         test_file: data/property_data/Rigidity/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     sentience_pred:
       data_args:
         task_name: sentience_pred
@@ -71,7 +71,7 @@ FinetuningArguments:
         train_file: data/property_data/Sentience/train.csv
         test_file: data/property_data/Sentience/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     shape_pred:
       data_args:
         task_name: shape_pred
@@ -79,7 +79,7 @@ FinetuningArguments:
         train_file: data/property_data/Shape/train.csv
         test_file: data/property_data/Shape/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     size_pred:
       data_args:
         task_name: size_pred
@@ -87,7 +87,7 @@ FinetuningArguments:
         train_file: data/property_data/Size/train.csv
         test_file: data/property_data/Size/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     temperature_pred:
       data_args:
         task_name: temperature_pred
@@ -95,7 +95,7 @@ FinetuningArguments:
         train_file: data/property_data/Temperature/train.csv
         test_file: data/property_data/Temperature/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     texture_pred:
       data_args:
         task_name: texture_pred
@@ -103,7 +103,7 @@ FinetuningArguments:
         train_file: data/property_data/Texture/train.csv
         test_file: data/property_data/Texture/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     weight_pred:
       data_args:
         task_name: weight_pred
@@ -111,7 +111,7 @@ FinetuningArguments:
         train_file: data/property_data/Weight/train.csv
         test_file: data/property_data/Weight/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
   downstream_tasks:
     pep_plausibility_adapter:
       data_args:
@@ -120,7 +120,7 @@ FinetuningArguments:
         train_file: data/plausibility_data/pep_3k/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
       fusion:
         - verb_subject_score
         - verb_object_score
@@ -141,7 +141,7 @@ FinetuningArguments:
         train_file: data/plausibility_data/pep_3k/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
     20q_plausibility_adapter:
       data_args:
         task_name: 20q_plausibility_adapter
@@ -149,7 +149,7 @@ FinetuningArguments:
         train_file: data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
       fusion:
         - verb_subject_score
         - verb_object_score
@@ -170,4 +170,4 @@ FinetuningArguments:
         train_file: data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
       adapter_args:
-        adapter_config: lora
+        adapter_config: seq_bn
