Change from albert to roberta

--- a/config/base.yaml
+++ b/config/base.yaml
@@ -4,7 +4,8 @@ MetaArguments:
   log_file_path: plausibility_vaccine.log
 ModelArguments:
   cache_dir: .cache
-  pretrained_model_name: albert-base-v2
+  #pretrained_model_name: albert-base-v2
+  pretrained_model_name: roberta-base
 TrainingArguments:
   learning_rate: 0.0001
   num_train_epochs: 10.0
