--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,8 +13,11 @@ dependencies = [
     "adapters>=1.0.1",
     "datasets>=3.1.0",
     "evaluate>=0.4.3",
+    "mypy>=1.13.0",
     "numpy>=2.0.2",
+    "pandas>=2.2.3",
     "scikit-learn>=1.5.2",
+    "tabulate>=0.9.0",
     "torch>=2.5.1",
 ]
 
