WIP: Add mutual info property plots

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -38,6 +38,8 @@ verb-data-generation = [
 analytics = [
     "nltk>=3.9.1",
     "pandas>=2.2.3",
+    "scikit-learn>=1.5.2",
+    "seaborn>=0.13.2",
 ]
 
 [tool.mypy]
