--- a/pyproject.toml
+++ b/pyproject.toml
@@ -40,6 +40,7 @@ analytics = [
     "pandas>=2.2.3",
     "scikit-learn>=1.5.2",
     "seaborn>=0.13.2",
+    "statsmodels>=0.14.4",
 ]
 
 [tool.mypy]
