--- a/config/pretraining.yaml
+++ b/config/pretraining.yaml
@@ -2,6 +2,7 @@
 MetaArguments:
   global_seed: 1337
   log_file_path: plausibility_vaccine.log
+  num_test_cv: 5
 ModelArguments:
   cache_dir: .cache
   pretrained_model_name: albert-base-v2
