--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ analytics = [
     "scikit-learn>=1.5.2",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.4",
+    "tabulate>=0.9.0",
 ]
 
 [tool.mypy]
