Rename 'num_test_cv' -> 'num-test_shards'

--- a/config/endlines.yaml
+++ b/config/endlines.yaml
@@ -23,7 +23,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/pep_3k/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       fusion:
@@ -46,7 +46,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/pep_3k/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       fusion:
@@ -67,7 +67,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/pep_3k/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       fusion:
@@ -90,7 +90,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/pep_3k/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       fusion:
@@ -111,7 +111,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       fusion:
@@ -134,7 +134,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       fusion:
@@ -155,7 +155,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       fusion:
@@ -178,7 +178,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       fusion:
