--- a/config/baselines.yaml
+++ b/config/baselines.yaml
@@ -23,7 +23,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/pep_3k/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       use_adapter_for_task: false
@@ -33,7 +33,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/pep_3k/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       use_adapter_for_task: true
@@ -43,7 +43,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       use_adapter_for_task: false
@@ -53,7 +53,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       use_adapter_for_task: true
