--- a/config/combined.yaml
+++ b/config/combined.yaml
@@ -22,7 +22,7 @@ FinetuningArguments:
         is_regression: true
         train_file: data/verb_understanding_data/selectional_association_subject/train.csv
         test_file: data/verb_understanding_data/selectional_association_subject/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     verb_object_score:
@@ -31,7 +31,7 @@ FinetuningArguments:
         is_regression: true
         train_file: data/verb_understanding_data/selectional_association_object/train.csv
         test_file: data/verb_understanding_data/selectional_association_object/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     mobility_pred:
@@ -40,7 +40,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Mobility/train.csv
         test_file: data/property_data/Mobility/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     opacity_pred:
@@ -49,7 +49,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Opacity/train.csv
         test_file: data/property_data/Opacity/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     phase_pred:
@@ -58,7 +58,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Phase/train.csv
         test_file: data/property_data/Phase/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     rigidity_pred:
@@ -67,7 +67,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Rigidity/train.csv
         test_file: data/property_data/Rigidity/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     sentience_pred:
@@ -76,7 +76,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Sentience/train.csv
         test_file: data/property_data/Sentience/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     shape_pred:
@@ -85,7 +85,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Shape/train.csv
         test_file: data/property_data/Shape/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     size_pred:
@@ -94,7 +94,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Size/train.csv
         test_file: data/property_data/Size/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     temperature_pred:
@@ -103,7 +103,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Temperature/train.csv
         test_file: data/property_data/Temperature/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     texture_pred:
@@ -112,7 +112,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Texture/train.csv
         test_file: data/property_data/Texture/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
     weight_pred:
@@ -121,7 +121,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/property_data/Weight/train.csv
         test_file: data/property_data/Weight/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
   downstream_tasks:
@@ -133,7 +133,7 @@ FinetuningArguments:
           - data/plausibility_data/pep_3k/valid.csv
           - data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       use_adapter_for_task: false
@@ -145,7 +145,7 @@ FinetuningArguments:
           - data/plausibility_data/pep_3k/valid.csv
           - data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       use_adapter_for_task: true
@@ -157,7 +157,7 @@ FinetuningArguments:
           - data/plausibility_data/pep_3k/valid.csv
           - data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       fusion:
@@ -182,7 +182,7 @@ FinetuningArguments:
           - data/plausibility_data/pep_3k/valid.csv
           - data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/pep_3k/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       fusion:
@@ -205,7 +205,7 @@ FinetuningArguments:
         is_regression: false
         train_file: data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       use_adapter_for_task: false
@@ -217,7 +217,7 @@ FinetuningArguments:
           - data/plausibility_data/pep_3k/valid.csv
           - data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       use_adapter_for_task: true
@@ -229,7 +229,7 @@ FinetuningArguments:
           - data/plausibility_data/pep_3k/valid.csv
           - data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config:
       fusion:
@@ -254,7 +254,7 @@ FinetuningArguments:
           - data/plausibility_data/pep_3k/valid.csv
           - data/plausibility_data/twentyquestions/valid.csv
         test_file: data/plausibility_data/twentyquestions/test.csv
-        num_test_cv: 5
+        num_test_shards: 5
       adapter_args:
         adapter_config: seq_bn[reduction_factor=64]
       fusion:
