--- a/config/albert_reduce_factor_32/endlines.yaml
+++ b/config/albert_reduce_factor_32/endlines.yaml
@@ -9,7 +9,7 @@ TrainingArguments:
   learning_rate: 0.0001
   num_train_epochs: 10.0
   optim: adamw_torch
-  output_dir: results
+  output_dir: results/albert_reduce_factor_32
   overwrite_output_dir: false
   per_device_eval_batch_size: 8
   per_device_train_batch_size: 8
@@ -69,7 +69,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/pep_3k/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=32]
       fusion:
         - verb_subject_score
         - verb_object_score
@@ -92,7 +92,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/pep_3k/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=32]
       fusion:
         - mobility_pred
         - opacity_pred
@@ -157,7 +157,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/twentyquestions/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=32]
       fusion:
         - verb_subject_score
         - verb_object_score
@@ -180,7 +180,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/twentyquestions/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=32]
       fusion:
         - mobility_pred
         - opacity_pred
@@ -251,7 +251,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/pep_3k/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=32]
       fusion:
         - verb_subject_score
         - verb_object_score
@@ -276,7 +276,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/pep_3k/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=32]
       fusion:
         - mobility_pred
         - opacity_pred
@@ -347,7 +347,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/twentyquestions/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=32]
       fusion:
         - verb_subject_score
         - verb_object_score
@@ -372,7 +372,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/twentyquestions/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=32]
       fusion:
         - mobility_pred
         - opacity_pred
