--- a/config/bert_reduce_factor_16/baselines.yaml
+++ b/config/bert_reduce_factor_16/baselines.yaml
@@ -4,12 +4,12 @@ MetaArguments:
   log_file_path: plausibility_vaccine.log
 ModelArguments:
   cache_dir: .cache
-  pretrained_model_name: albert-base-v2
+  pretrained_model_name: bert-base-uncased
 TrainingArguments:
   learning_rate: 0.0001
   num_train_epochs: 10.0
   optim: adamw_torch
-  output_dir: results
+  output_dir: results/albert_reduce_factor_16
   overwrite_output_dir: false
   per_device_eval_batch_size: 8
   per_device_train_batch_size: 8
@@ -35,7 +35,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/pep_3k/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=16]
       use_adapter_for_task: true
     20q_plausibility_finetune_mlp_base:
       data_args:
@@ -55,7 +55,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/twentyquestions/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=16]
       use_adapter_for_task: true
     pep_plausibility_combined_finetune_mlp_base:
       data_args:
@@ -79,7 +79,7 @@ FinetuningArguments:
         test_file: data/plausibility_data/pep_3k/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=16]
       use_adapter_for_task: true
     20q_plausibility_combined_finetune_mlp_base:
       data_args:
@@ -103,5 +103,5 @@ FinetuningArguments:
         test_file: data/plausibility_data/twentyquestions/test.csv
         num_test_shards: 5
       adapter_args:
-        adapter_config: seq_bn[reduction_factor=64]
+        adapter_config: seq_bn[reduction_factor=16]
       use_adapter_for_task: true
