--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ analytics = [
     "nltk>=3.9.1",
     "pandas>=2.2.3",
     "scikit-learn>=1.5.2",
+    "scipy>=1.13.1",
     "seaborn>=0.13.2",
     "statsmodels>=0.14.4",
     "tabulate>=0.9.0",
